--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="conteudo">
     <header class="cabecalho">
-        <input type="text" id="rep" placeholder="Search a repositorie">
-        <input type="button" value="search" onclick="search()">
+        <input type="text" id="rep" placeholder="Search a repositorie" id="text">
+        <input type="button" value="search" onclick="search()" id="search">
     </header>
 
     <div id="qtd">
@@ -18,7 +18,7 @@
     </div>
 
     <div class="res">
-        
+
     </div>
 
     <script src="script.js">
